--- a/estilo.css
+++ b/estilo.css
@@ -8,3 +8,29 @@ body{
 	margin: 5px 5% 5px 5%;
 	text-align: center;
 }
+.menu
+{
+	background: black;
+	list-style: none;
+	padding: 0;
+	width: 90%;
+	max-width: 1000px;
+	margin: auto;
+}
+.menu li a
+{
+	text-decoration: none;
+	color: white;
+	padding: 20px;
+	display: block;
+
+}
+.menu li
+{
+	display:inline-block;
+	text-align: center;
+}
+.menu li a:hover
+{
+	background: blue;
+}
